<resources>
    <string name="app_name">AppCovid2021</string>
    <string name="action_settings">Settings</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="utentes">utentes</string>
    <string name="Utentes">Utentes</string>
    <string name="Página_Inicial">Página Inicial</string>
    <string name="guardar">Guardar</string>
    <string name="cancelar">cancelar</string>
    <string name="_01_08_1996">01/08/1996</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="eliminar">eliminar</string>
    <string name="nova_localizacao">nova_localizacao</string>
    <string name="alterar_localizacao">alterar_localizacao</string>
    <string name="eliminar_localizacao">eliminar_localizacao</string>
    <string name="versao">AppCovid2021 v2.0</string>
    <string name="novo_utente">novo_utente</string>
    <string name="alterar_utente">alterar_utente</string>
    <string name="eliminar_utente">eliminar_utente</string>
    <string name="codigo_postal">Codigo Postal</string>
    <string name="nome">Nome</string>
    <string name="data_vacina">Data Vacina</string>
    <string name="localidade">localidade</string>
    <string name="Localidades">Localidades</string>
    <string name="data_nascimento">Data Nascimento</string>
    <string name="vacina">vacina</string>
    <string name="numero_utente">Numero Utente</string>
    <string name="data">Data</string>
    <string name="nova_vacina">nova_vacina</string>
    <string name="alterar_vacina">alterar_vacina</string>
    <string name="eliminar_vacina">eliminar_vacina</string>
    <string name="Elimina_Vacina">Eliminar Vacina</string>
    <string name="Elimina_Utente">Eliminar Vacina</string>
    <string name="Elimina_Localidade">Eliminar Vacina</string>
    <string name="Editar_Localidade">Editar Localidade</string>
    <string name="Editar_Utente">Editar Utente</string>
    <string name="Novo_Utente">Novo Utente</string>
    <string name="Nova_Localidade">Nova Localidade</string>
    <string name="Nova_Vacina">Nova Vacina</string>
    <string name="Editar_Vacina">Editar Vacina</string>
    <string name="appcovid2021">AppCovid2021</string>
    <string name="localidades">Localidades</string>
    <string name="vacinas">vacinas</string>
    <string name="Vacinas">Vacinas</string>
</resources>