<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="pt.ipg.appcovid2021.MainActivity">
    <item
        android:id="@+id/action_nova_localizacao"
        android:icon="@drawable/ic_baseline_add_24"
        android:title="@string/nova_localizacao"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_alterar_localizacao"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/alterar_localizacao"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_eliminar_localizacao"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/eliminar_localizacao"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>